[package]
name = "zkp_demo"
version = "0.1.0"
edition = "2021"
authors = [
    "dylan <likeqin86@163.com>"
]
description = "base zk-SNARK library-bellman Demo"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
ff = "0.13"
rand="0.8.5"
rand_core="0.6.4"
bls12_381 = "0.8"
